Fixed spacing

--- a/css/pokemon.css
+++ b/css/pokemon.css
@@ -4,6 +4,7 @@ nav ul {
   width: 100%;
   background-color: #000;
   border-bottom: solid #fff;
+  
   z-index: 9999;
 }
 
@@ -19,6 +20,10 @@ nav ul li a {
 
 nav ul li a:hover {
   color: rgb(80, 74, 74);
+}
+
+header {
+  padding: 30px;
 }
 
 main {
